<resources>
    <string name="app_name">Completionist</string>
    <string name="button_add_new_task">New Task</string>
    <string name="task_header">Task:</string>
    <string name="task_description_header">Additional Notes:</string>
    <string name="button_confirm_add">Add</string>
    <string name="title_activity_view_task">ViewTaskActivity</string>
    <string name="complete_status">Complete</string>
    <string name="not_complete_status">Not Yet Complete</string>
    <string name="delete_button">Delete</string>
    <string name="edit_button">Edit</string>
    <string name="title_activity_edit_task">EditTaskActivity</string>
    <string name="save_button">Save</string>
    <string name="task_priority_header">Priority:</string>
    <string name="high_priority">High Priority</string>
    <string name="medium_priority">Medium Priority</string>
    <string name="low_priority">Low Priority</string>
    <string name="no_priority">Priority Status Not Set</string>
    <string name="priority_icon_description">Priority Status</string>
    <string name="priority_toggle_label">Order By Priority:</string>
    <string name="show_all_toggle_label">Show Completed Tasks</string>
    <string name="deadline">Deadline:</string>
    <string name="no_deadline_set">No Deadline Set</string>
    <string name="calendar_description">Calendar Icon</string>
    <string name="alert_icon_for_overdue">Alert Icon For Overdue Tasks</string>
    <string name="completionist_icon">Completionist Icon</string>
    <array name="priorities">
        <item>High</item>
        <item>Medium</item>
        <item>Low</item>
        <item>No priority</item>
    </array>
</resources>
