<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/editActivityTextViewTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editActivityEditTextTaskTitle"
            android:text="@string/task_header" />

        <EditText
            android:id="@+id/editActivityEditTextTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/editActivityTextViewTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editActivityEditTextTaskDescription"
            android:text="@string/task_description_header" />

        <EditText
            android:id="@+id/editActivityEditTextTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textShortMessage|textLongMessage" />

        <TextView
            android:id="@+id/editActivityTextViewPriorityStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_priority_header" />

        <Spinner
            android:id="@+id/editActivitySpinnerPriorityStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/priorities" />

        <TextView
            android:id="@+id/editActivityTextViewCompletionStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/editActivitySaveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onSaveButtonClicked"
            android:text="@string/save_button" />

    </LinearLayout>

</android.widget.RelativeLayout>