<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="false"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/viewActivityTextViewTaskTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Title" />

        <TextView
            android:id="@+id/viewActivityTextViewTaskDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:height="120dp"
            tools:text="Description" />

        <TextView
            android:id="@+id/viewActivityTextViewPriorityStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            tools:text="Priority status" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/viewActivityTextViewDeadlineLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deadline"
                android:textStyle="italic" />
        </LinearLayout>

        <TextView
            android:id="@+id/viewActivityTextViewCompletionStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/holo_green_light"
            android:textSize="24sp"
            tools:text="Completion status" />

        <Button
            android:id="@+id/viewActivityButtonEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onEditItemClicked"
            android:text="@string/edit_button" />

        <Button
            android:id="@+id/viewActivityButtonDelete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="onDeleteItemClicked"
            android:text="@string/delete_button" />

    </LinearLayout>

</android.widget.RelativeLayout>